# hnu-gadget

./: .gitignore  Makefile  pyproject.toml  requirements.txt
hnu_gadget/: application.py  hackernews.py  main.py
hnu_gadget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
newsz/: .application.py.swp  __main__.py  application.py  hackernews.py
newsz/containers/: .main_block.py.swp  main_block.py
newsz/elements/: button.py
tests/: test_application.py  test_hackernews.py  test_hnu_gadget.py
tests/containers/: .test_main_block.py.swp  test_main_block.py
